--- a/src/app/contact/page.scss
+++ b/src/app/contact/page.scss
@@ -1,13 +1,44 @@
 .contact-page{
-    padding: 100px 20px 0 20px;
-    height: 100%;
     width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 100px 20px 0 20px;
+    overflow-y: auto;
+    color: #fff;
+
+    &::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-image: url('../../../public/1.png');
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        z-index: -1;
+    }
+
+    &::after {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background: linear-gradient(to bottom, rgba(0,0,0,0) 70%, rgba(0,0,0,0.8) 100%);
+        z-index: -1;
+    }
 }
 .text-zone{
-    width: 100%;
+    width: 80%;
     height: 80%;
     display: flex;
     flex-direction: column;
+    align-items: center;
 
     h1{
         font-size: 40px;
@@ -23,6 +54,9 @@
     .contact-form{
         width: 100%;
         height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
 
         form{
             height: 100%;
@@ -30,6 +64,7 @@
             ul{
                 display: flex;
                 flex-direction: column;
+                align-items: center;
                 height: 100%;
 
                 li{
