--- a/src/components/BigNumbers/BigNumbers.scss
+++ b/src/components/BigNumbers/BigNumbers.scss
@@ -4,7 +4,7 @@
   flex-direction: column;
   gap: 2rem;
   align-items: center;
-  margin-bottom: 10px;
+  background: black;
 
   @media (min-width: 768px) {
     flex-direction: row;
