adjusted projects screen to new vertical layout

--- a/src/app/projects/page.scss
+++ b/src/app/projects/page.scss
@@ -50,21 +50,41 @@
         align-items: start;
         flex-wrap: wrap;
         width: 100%;
-        gap: 30px;
+        gap: 50px;
         overflow-y: auto;
         
         .project-card{
             display: flex;
             flex-direction: column;
-            gap: 15px;
-            width: 400px;
+            gap: 20px;
+            width: 80%;
 
-            h3{
-                font-size: 20px;
+            .project-description{
+                width: 50%;
+                margin-left: 20px;
+
+                p{
+                    line-height: 1.5;
+                }
+
+                h3{
+                    font-size: 20px;
+                    color: #fff;
+                    padding: 5px;
+                    margin-bottom: 10px;
+                    border-bottom: 2px solid #3f69ff;
+                }
             }
+
+            
             img{
-                width: 100%;
-                height: 200px;
+                width: 40%;
+                height: auto;
+                border-radius: 5px;
+            }
+
+            .project-top{
+                display: flex;
             }
 
             .project-skills{
@@ -72,12 +92,15 @@
                 width: 100%;
                 flex-wrap: wrap;
                 gap: 10px;
+                margin-bottom: 10px;
                 
-                span{
+                
+                .cards-skills{
                     color: #000;
-                    background-color: #8e8e8e;
+                    background-color: #727272;
                     border-radius: 5px;
                     padding: 5px;
+                    font-size: 16px;
                 }
             }
 
